nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: docker.io/nginx:1.25
    resources:
      limits:
        cpu: "100m"
        memory: "128Mi"
