web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: autoscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: docker.io/library/nginx:1.25
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: autoscale
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
