constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRegistries
metadata:
  name: only-acr-images
spec:
  parameters:
    spec:
      parameters:
        allowedRegistries:
          - "myacr.azurecr.io/"
          - "docker.io/falcosecurity/"
          - "docker.io/"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
